Melhorias visuais e de código

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             <label for="peso">Peso:</label>
             <input type="number" name="peso em kg" id="peso" placeholder="Em Kg. Ex: 55">
             <input type="button" value="Calcular" onclick="calcularIMC()" class="Btn">
-            <input type="button" value="Limpar" onclick="window.location.reload()" class="Btn">
+            <button type="reset" onclick="limpar()" class="Btn">Limpar</button>
         </form>
         <div id="mensagens">Resultado</div>
     </div>
-
     <script src="/scripts/index.js"></script>
 </body>
 
